portfolio game elements

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@ $primary-color: #ffd700;
 
 @import "animate.css";
 @import "~loaders.css/src/animations/pacman.scss";
-@import "~bootstrap/scss/bootstrap";
+// @import "~bootstrap/scss/bootstrap";
 
 @font-face {
   font-family: "Helvetica Neu";
