--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 html {
   margin: 0;
   font-size: 63%;
@@ -10,7 +9,7 @@ body {
   min-height: 100%;
   font: 300 11px/1.4 "Helvetica Neu", "sans-serif";
   color: #444;
-  background: rgba(2,36,69,1);
+  background: rgba(2, 36, 69, 1);
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -18,8 +17,7 @@ body {
 }
 
 @media screen and (max-width: 1219px) {
-  body{
-    overflow:visible;
+  body {
+    overflow: visible;
   }
 }
-
